@@ -32,6 +32,10 @@
       "version_requirement": ">= 6.0.0 < 7.0.0"
     },
     {
+      "name": "simp/pki",
+      "version_requirement": ">= 6.1.0 < 7.0.0"
+    },
+    {
       "name": "simp/postfix",
       "version_requirement": ">= 5.0.0 < 6.0.0"
     },
